--- a/public/css/front.css
+++ b/public/css/front.css
@@ -24,6 +24,10 @@ body {
   }
 }
 
+.page-wrapper {
+  display: flex;
+}
+
 .btn {
   border: none;
   border-radius: 0.4rem;
@@ -39,5 +43,10 @@ body {
 
 a {
   text-decoration: none;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin: 1.2rem 0 1rem;
 }
 
