--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -23,6 +23,9 @@ body {
         padding: 0 2rem;
     }
 }
+.page-wrapper {
+    display: flex;
+}
 .btn {
     border: none;
     border-radius: .4rem;
@@ -37,4 +40,8 @@ body {
 // Typo
 a {
     text-decoration: none;
+}
+h3 {
+    font-size: 1.5rem;
+    margin: 1.2rem 0 1rem;
 }
