--- a/public/css/front.css
+++ b/public/css/front.css
@@ -24,8 +24,10 @@ body {
   }
 }
 
-.page-wrapper {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .page-wrapper {
+    display: flex;
+  }
 }
 
 .btn {
