--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -23,8 +23,10 @@ body {
         padding: 0 2rem;
     }
 }
-.page-wrapper {
-    display: flex;
+@media screen and (min-width: 768px) {
+    .page-wrapper {
+        display: flex;
+    }
 }
 .btn {
     border: none;
